--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext {
+        kotlin_version         = '1.3.21'
+        coroutinesVersion      = "1.1.1"
+        anko_version           = '0.10.6'
+        gson_version           = '2.8.4'
+        rxjava_version         = '2.1.1'
+        rxkotlin_version       = '2.1.0'
+        rxandroid_version      = '2.0.2'
+        rxadapter_version      = '2.3.0'
+        rxrelay_version        = '2.0.0'
+        dagger_version         = '2.19'
+        timber_version         = '4.5.1'
+        okhttp_version         = '3.10.0'
+        retrofit_version       = '2.4.0'
+        gson_version           = '2.4.0'
+        glide_version          = '4.8.0'
+        arch_component_version = '1.1.1'
+        ktxVersion             = '1.0.1'
+        lifecycleVersion       = '2.1.0-alpha03'
+        materialVersion        = '1.0.0'
+        navigationVersion      = '2.0.0'
+        recyclerViewVersion    = '1.1.0-alpha03'
+        roomVersion            = '2.1.0-alpha04'
+    }
+
     repositories {
         google()
         jcenter()
